@@ -3,6 +3,8 @@
   * Fix lseek define for a successful compile under 64-bit MinGW.
   * Pipe image to display program no longer reports an exception (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23532).
+  * Check that profile is non-NULL in coders/tiff.c (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25770).
 
 2014-06-08  6.8.9-3 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.9-3, SVN revision 15975.
